[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/CameraController.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 288 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 512, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 288 )

[node name="CameraController" type="Camera2D"]
anchor_mode = 0
current = true
script = ExtResource( 1 )

[node name="EdgeScroll" type="CanvasLayer" parent="."]

[node name="Top" type="Area2D" parent="EdgeScroll"]
position = Vector2( 512, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EdgeScroll/Top"]
shape = SubResource( 1 )

[node name="Right" type="Area2D" parent="EdgeScroll"]
position = Vector2( 1016, 288 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EdgeScroll/Right"]
shape = SubResource( 2 )

[node name="Bottom" type="Area2D" parent="EdgeScroll"]
position = Vector2( 512, 568 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EdgeScroll/Bottom"]
shape = SubResource( 3 )

[node name="Left" type="Area2D" parent="EdgeScroll"]
position = Vector2( 8, 288 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EdgeScroll/Left"]
shape = SubResource( 4 )

[connection signal="mouse_entered" from="EdgeScroll/Top" to="." method="_on_Top_mouse_entered"]
[connection signal="mouse_exited" from="EdgeScroll/Top" to="." method="_on_Top_mouse_exited"]
[connection signal="mouse_entered" from="EdgeScroll/Right" to="." method="_on_Right_mouse_entered"]
[connection signal="mouse_exited" from="EdgeScroll/Right" to="." method="_on_Right_mouse_exited"]
[connection signal="mouse_entered" from="EdgeScroll/Bottom" to="." method="_on_Bottom_mouse_entered"]
[connection signal="mouse_exited" from="EdgeScroll/Bottom" to="." method="_on_Bottom_mouse_exited"]
[connection signal="mouse_entered" from="EdgeScroll/Left" to="." method="_on_Left_mouse_entered"]
[connection signal="mouse_exited" from="EdgeScroll/Left" to="." method="_on_Left_mouse_exited"]
